[docs] Fix header alignment for beta label

--- a/site/less/layout.less
+++ b/site/less/layout.less
@@ -14,13 +14,13 @@ body {
     align-items: center;
     justify-content: space-between;
     > a {
-      min-width: 16rem;
+      min-width: 21rem;
       margin-left: 1rem;
     }
     > nav {
       display: none;
       flex: 1;
-      max-width: 65rem;
+      max-width: 60rem;
       margin: 0;
     }
     > #dark {
